==> ARMmbed/mbed-os/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_NRF51/serial_api.c <==
#include "serial_api.h"
#include <string.h>
#include "mbed_assert.h"
#include "mbed_error.h"
#include "nrf_uart.h"
#include "nrf_drv_common.h"
#include "app_util_platform.h"
#include "nrf_gpio.h"
#include "sdk_config.h"
#define UART_INSTANCE_COUNT 1
#define UART_INSTANCE       NRF_UART0
#define UART_IRQn           UART0_IRQn
#define UART_IRQ_HANDLER    UART0_IRQHandler
#define UART_INSTANCE_ID    0
#define UART_CB uart_cb[UART_INSTANCE_ID]
#define UART_DEFAULT_BAUDRATE   UART_DEFAULT_CONFIG_BAUDRATE
#define UART_DEFAULT_PARITY     UART_DEFAULT_CONFIG_PARITY
    #define MBED_CONF_NORDIC_UART_HWFC 1
    #define UART_DEFAULT_HWFC       UART_DEFAULT_CONFIG_HWFC
    #define UART_DEFAULT_HWFC  NRF_UART_HWFC_DISABLED
#define UART_DEFAULT_CTS        CTS_PIN_NUMBER
#define UART_DEFAULT_RTS        RTS_PIN_NUMBER
    #define NRFx_MBED_UART_IRQ_PRIORITY  APP_IRQ_PRIORITY_LOW
    #define NRFx_MBED_UART_IRQ_PRIORITY  APP_IRQ_PRIORITY_LOWEST
    #define UART_IRQ_TX 1
    #define UART_IRQ_RX 2

void serial_init(serial_t *obj, PinName tx, PinName rx) {

    NVIC_SetVector(UART0_IRQn, (uint32_t) UART0_IRQHandler);

    
    UART_CB.pseltxd =
        (tx == NC) ? NRF_UART_PSEL_DISCONNECTED : (uint32_t)tx;
    UART_CB.pselrxd =
        (rx == NC) ? NRF_UART_PSEL_DISCONNECTED : (uint32_t)rx;
    if (UART_CB.pseltxd != NRF_UART_PSEL_DISCONNECTED) {
        nrf_gpio_pin_set(UART_CB.pseltxd);
        nrf_gpio_cfg_output(UART_CB.pseltxd);
    }
    if (UART_CB.pselrxd != NRF_UART_PSEL_DISCONNECTED) {
        nrf_gpio_cfg_input(UART_CB.pselrxd, NRF_GPIO_PIN_NOPULL);
    }

    if (UART_CB.initialized) {
        // For already initialized peripheral it is sufficient to reconfigure
        // RX/TX pins only.

        // Ensure that there is no unfinished TX transfer.
        while (!serial_writable(obj)) {
        }
        // UART pins can be configured only when the peripheral is disabled.
        nrf_uart_disable(UART_INSTANCE);
        nrf_uart_txrx_pins_set(UART_INSTANCE, UART_CB.pseltxd, UART_CB.pselrxd);
        nrf_uart_enable(UART_INSTANCE);
    }
    else {
        UART_CB.baudrate = UART_DEFAULT_BAUDRATE;
        UART_CB.parity   = UART_DEFAULT_PARITY;
        UART_CB.hwfc     = UART_DEFAULT_HWFC;
        UART_CB.pselcts  = UART_DEFAULT_CTS;
        UART_CB.pselrts  = UART_DEFAULT_RTS;

        nrf_uart_event_clear(UART_INSTANCE, NRF_UART_EVENT_RXDRDY);
        nrf_uart_event_clear(UART_INSTANCE, NRF_UART_EVENT_TXDRDY);
        nrf_uart_task_trigger(UART_INSTANCE, NRF_UART_TASK_STARTRX);
        nrf_uart_task_trigger(UART_INSTANCE, NRF_UART_TASK_STARTTX);

        nrf_uart_int_disable(UART_INSTANCE, NRF_UART_INT_MASK_RXDRDY |
                                            NRF_UART_INT_MASK_TXDRDY);
    #if DEVICE_SERIAL_ASYNCH
        nrf_uart_int_enable(UART_INSTANCE, NRF_UART_INT_MASK_ERROR);
    #endif
        nrf_drv_common_irq_enable(UART_IRQn, NRFx_MBED_UART_IRQ_PRIORITY);

        // TX interrupt needs to be signaled when transmitter buffer is empty,
        // so a dummy transmission is needed to get the TXDRDY event initially
        // set.
        nrf_uart_configure(UART_INSTANCE,
            NRF_UART_PARITY_EXCLUDED, NRF_UART_HWFC_DISABLED);
        // Use maximum baud rate, so this dummy transmission takes as little
        // time as possible.
        nrf_uart_baudrate_set(UART_INSTANCE, NRF_UART_BAUDRATE_1000000);
        // Perform it with disconnected TX pin, so nothing actually comes out
        // of the device.
        nrf_uart_txrx_pins_disconnect(UART_INSTANCE);
        nrf_uart_hwfc_pins_disconnect(UART_INSTANCE);
        nrf_uart_enable(UART_INSTANCE);
        nrf_uart_txd_set(UART_INSTANCE, 0);
        while (!nrf_uart_event_check(UART_INSTANCE, NRF_UART_EVENT_TXDRDY)) {
        }
        nrf_uart_disable(UART_INSTANCE);

        // Now everything is prepared to set the default configuration and
        // connect the peripheral to actual pins.
        nrf_uart_txrx_pins_set(UART_INSTANCE, UART_CB.pseltxd, UART_CB.pselrxd);
        nrf_uart_baudrate_set(UART_INSTANCE, UART_CB.baudrate);
        nrf_uart_configure(UART_INSTANCE, UART_CB.parity, UART_CB.hwfc);
        if (UART_CB.hwfc == NRF_UART_HWFC_ENABLED) {
            internal_set_hwfc(FlowControlRTSCTS,
                (PinName) UART_CB.pselrts, (PinName) UART_CB.pselcts);
        }
        
        nrf_uart_enable(UART_INSTANCE);

        UART_CB.initialized = true;
    }

    if (tx == STDIO_UART_TX && rx == STDIO_UART_RX) {
        stdio_uart_inited = 1;
        memcpy(&stdio_uart, obj, sizeof(serial_t));
    }
    else {
        stdio_uart_inited = 0;
    }
}

void serial_format(serial_t *obj,
                   int data_bits, SerialParity parity, int stop_bits)
{
    (void)obj;

    if (data_bits != 8) {
        error("UART supports only 8 data bits.\r\n");
    }
    if (stop_bits != 1) {
        error("UART supports only 1 stop bits.\r\n");
    }
    if (parity == ParityNone) {
        UART_CB.parity = NRF_UART_PARITY_EXCLUDED;
    } else if (parity == ParityEven) {
        UART_CB.parity = NRF_UART_PARITY_INCLUDED;
    } else {
        error("UART supports only even parity.\r\n");
    }

    // Reconfigure UART peripheral.
    nrf_uart_configure(UART_INSTANCE, UART_CB.parity, UART_CB.hwfc);
}

void serial_irq_set(serial_t *obj, SerialIrq irq, uint32_t enable)
{
    (void)obj;
    if (enable) {
        switch (irq) {
            case RxIrq:
            #if DEVICE_SERIAL_ASYNCH
                UART_CB.irq_enabled |= UART_IRQ_RX;
            #endif
                nrf_uart_int_enable(UART_INSTANCE, NRF_UART_INT_MASK_RXDRDY);
                break;

            case TxIrq:
            #if DEVICE_SERIAL_ASYNCH
                UART_CB.irq_enabled |= UART_IRQ_TX;
            #endif
                nrf_uart_int_enable(UART_INSTANCE, NRF_UART_INT_MASK_TXDRDY);
                break;
        }
    } else {
        switch (irq) {
            case RxIrq:
            #if DEVICE_SERIAL_ASYNCH
                UART_CB.irq_enabled &= ~UART_IRQ_RX;
                if (!UART_CB.rx_active)
            #endif
                {
                    nrf_uart_int_disable(UART_INSTANCE,
                        NRF_UART_INT_MASK_RXDRDY);
                }
                break;

            case TxIrq:
            #if DEVICE_SERIAL_ASYNCH
                UART_CB.irq_enabled &= ~UART_IRQ_TX;
                if (!UART_CB.tx_active)
            #endif
                {
                    nrf_uart_int_disable(UART_INSTANCE,
                        NRF_UART_INT_MASK_TXDRDY);
                }
                break;
        }
    }
}

int serial_getc(serial_t *obj)
{
    while (!serial_readable(obj)) {
    }

    nrf_uart_event_clear(UART_INSTANCE, NRF_UART_EVENT_RXDRDY);
    return nrf_uart_rxd_get(UART_INSTANCE);
}

void serial_putc(serial_t *obj, int c)
{
    while (!serial_writable(obj)) {
    }

    nrf_uart_event_clear(UART_INSTANCE, NRF_UART_EVENT_TXDRDY);
    nrf_uart_txd_set(UART_INSTANCE, (uint8_t)c);
}

void serial_break_clear(serial_t *obj)
{
    (void)obj;
    nrf_gpio_pin_set(UART_CB.pseltxd);
    nrf_uart_txrx_pins_set(UART_INSTANCE, UART_CB.pseltxd, UART_CB.pselrxd);
    nrf_uart_task_trigger(UART_INSTANCE, NRF_UART_TASK_STARTRX);
    nrf_uart_task_trigger(UART_INSTANCE, NRF_UART_TASK_STARTTX);
}
