==> ARMmbed/mbed-os/libraries/mbed/targets/hal/TARGET_NORDIC/TARGET_NRF51822/serial_api.c <==
#include <string.h>
#include "serial_api.h"
#include "cmsis.h"
#include "pinmap.h"
#include "error.h"
#define UART_NUM    1

void serial_init(serial_t *obj, PinName tx, PinName rx) {
    // determine the UART to use -- for mcu's with multiple uart connections
    UARTName uart_tx = (UARTName)pinmap_peripheral(tx, PinMap_UART_TX);
    UARTName uart_rx = (UARTName)pinmap_peripheral(rx, PinMap_UART_RX);
    UARTName uart = (UARTName)pinmap_merge(uart_tx, uart_rx);
    
    if ((int)uart == NC) {
        error("Serial pinout mapping failed");       
    }
    
    obj->uart = (NRF_UART_Type *)uart;
    
    //pin configurations -- 
    //outputs    
    NRF_GPIO->DIR |= (1<<tx);//TX_PIN_NUMBER);
    NRF_GPIO->DIR |= (1<<RTS_PIN_NUMBER);

    NRF_GPIO->DIR &= ~(1<<rx);//RX_PIN_NUMBER);
    NRF_GPIO->DIR &= ~(1<<CTS_PIN_NUMBER);
    
    obj->uart->PSELRTS = RTS_PIN_NUMBER;
    obj->uart->PSELTXD = tx;//TX_PIN_NUMBER;
    
    //inputs
    obj->uart->PSELCTS = CTS_PIN_NUMBER;
    obj->uart->PSELRXD = rx;//RX_PIN_NUMBER;
    
    
    // set default baud rate and format
    serial_baud  (obj, 9600);
    serial_format(obj, 8, ParityNone, 1);
    
    obj->uart->ENABLE = (UART_ENABLE_ENABLE_Enabled << UART_ENABLE_ENABLE_Pos);;
    obj->uart->TASKS_STARTTX = 1;
    obj->uart->TASKS_STARTRX = 1;
    obj->uart->EVENTS_RXDRDY =0;
    
    obj->index = 0;
    
    // set rx/tx pins in PullUp mode
    pin_mode(tx, PullUp);
    pin_mode(rx, PullUp);
    
    if (uart == STDIO_UART) {
        stdio_uart_inited = 1;
        memcpy(&stdio_uart, obj, sizeof(serial_t));
    }
}

void serial_format(serial_t *obj, int data_bits, SerialParity parity, int stop_bits) {
    // 0: 1 stop bits, 1: 2 stop bits
   // int parity_enable, parity_select;
    switch (parity) {
        case ParityNone: 
            obj->uart->CONFIG  = 0;
        break;
        default:
            obj->uart->CONFIG  = (UART_CONFIG_PARITY_Included<<UART_CONFIG_PARITY_Pos);
            return;
    }
    //no Flow Control
}

void serial_irq_set(serial_t *obj, SerialIrq irq, uint32_t enable) {
    IRQn_Type irq_n = (IRQn_Type)0;

    switch ((int)obj->uart) {
        case UART_0: irq_n=UART0_IRQn ;
            break;
    }
    
    if (enable) {
        switch (irq) {
            case RxIrq: obj->uart->INTENSET |= (UART_INTENSET_RXDRDY_Msk);break;
            case TxIrq: obj->uart->INTENSET |= (UART_INTENSET_TXDRDY_Msk);break;
        }
        NVIC_SetPriority(irq_n, 3);
        NVIC_EnableIRQ(irq_n);
    }
    else { // disable
        int all_disabled = 0;
        switch (irq) {
            case RxIrq: obj->uart->INTENSET &= ~(UART_INTENSET_RXDRDY_Msk);
                        all_disabled = (obj->uart->INTENSET& (UART_INTENSET_TXDRDY_Msk))==0;
            break;
            case TxIrq: obj->uart->INTENSET &= ~(UART_INTENSET_TXDRDY_Msk);
                        all_disabled = (obj->uart->INTENSET& (UART_INTENSET_RXDRDY_Msk))==0;
            break;
        }
        
        if (all_disabled){
            NVIC_DisableIRQ(irq_n);
        }
    }
}

int serial_getc(serial_t *obj) {
    while (!serial_readable(obj));
    
    obj->uart->EVENTS_RXDRDY = 0;
    
    return (uint8_t)obj->uart->RXD;
}

void serial_putc(serial_t *obj, int c) {
    obj->uart->TXD = (uint8_t)c;
    
    while (!serial_writable(obj));
    
    obj->uart->EVENTS_TXDRDY =0;
}

void serial_break_clear(serial_t *obj) {
    obj->uart->TASKS_STARTTX = 1;
    obj->uart->TASKS_STARTRX = 1;
}
